# refactoring_test-2024

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Prime.cpp  Prime.h  main.cpp  streamRedirect.h  test.cpp
test/: CMakeLists.txt  test.cpp
